Apps/Wordpress/mysql-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql-app
  name: mysql-app
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-app
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-wordpress-mysql
      containers:
      - image: mysql
        name: mysql
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: mysql-persistent-storage      
      nodeSelector: 
        preferred: storage
