Apps/Wordpress/wordpress-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wordpress-app
  name: wordpress-app
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress-app
    spec:
      containers:
      - image: wordpress
        name: wordpress
      nodeSelector:
        preferred: app
