Apps/Wordpress/mysql-svc-ext.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql-svc-ext
  name: mysql-service-external
  namespace: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3306
    nodePort: 30066
  selector:
    app: mysql-app
  type: NodePort
status:
  loadBalancer: {}
