Apps/Wordpress/mysql-svc-int.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql-svc-int
  name: mysql-service-internal
  namespace: wordpress
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-app
  type: ClusterIP
status:
  loadBalancer: {}
