Apps/Wordpress/wordpress-svc-external.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wordpress-app
  name: wordpress-service-external
  namespace: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30988
  selector:
    app: wordpress-app
  type: NodePort
status:
  loadBalancer: {}
