Apps/Wordpress/wordpress-svc-internal.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wordpress-app
  name: wordpress-service-internal
  namespace: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress-app
  type: ClusterIP
status:
  loadBalancer: {}
