Apps/Wordpress/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wordpress-app
  name: wordpress-service
  namespace: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress-app
  type: NodePort
status:
  loadBalancer: {}
