Apps/Wordpress/wordpress-ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "tintorescopress.com"
    http:
      paths:
      - pathType: Prefix
        path: "/web"
        backend:
          service:
            name: wordpress-service-internal
            port:
              number: 8080
