Apps/Wordpress/mysql-policy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-policy-allow
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: mysql-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress-app
    ports:
    - protocol: TCP
      port: 3306
  - from:
    - podSelector:
        matchLabels:
          app: mysql-svc-ext
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - ipBlock:
        cidr: 192.168.56.0/24
