Apps/Wordpress/wordpress-policy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-policy-deny
  namespace: wordpress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
